<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="744dp"
            android:layout_height="443dp"
            android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shape1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="274dp"
            android:layout_height="160dp"

            android:layout_marginTop="56dp"
            android:layout_marginBottom="74dp"
            android:translationY="10dp"
            app:layout_constraintBottom_toTopOf="@+id/loginUsernameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_pesa_png" />

        <TextView
            android:id="@+id/loginUsernameTextView"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="-10dp"
            app:layout_constraintBottom_toTopOf="@+id/loginEmailEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/loginEmailEditText"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="55dp"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordTextView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsernameTextView">

        </EditText>

        <TextView
            android:id="@+id/loginPasswordTextView5"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="414dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="123dp"
            android:inputType="textPassword"
            android:translationY="10dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

        </EditText>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/button"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginButtonNotRegistered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText" />

        <TextView
            android:id="@+id/loginButtonNotRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="105dp"
            android:clickable="true"
            android:text="@string/not_registered_yet"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
