<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/cardViewTraining"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/trainingTypeCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hitTraining"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trainingTimeCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="7:00"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewTrainertext"
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center|left"
                android:text="@string/trainer"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/trainingUserCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/username" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNumberOfParticipantsText"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="Number of Participants:" />

            <TextView
                android:id="@+id/textViewActualNofParticipants"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="nofparticipants" />

            <TextView
                android:id="@+id/textViewmaxNumberOfParticipants"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:text="maxnumberofParticipants" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/joinTrainingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="Join Training" />

            <Space
                android:layout_width="100dp"
                android:layout_height="49dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/quitTrainingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#F44336"
                android:text="Quit Training" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>