<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#82b6bc"
    tools:context=".TrainingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="58dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_editor_absoluteY="180dp">

        <TextView
            android:id="@+id/textViewDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="14dp" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:text="DESCRIPTIONTRAINING"
            android:textColor="@color/black"
            android:translationX="14dp" />

        <TextView
            android:id="@+id/textViewParticipants"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationX="14dp"
            android:translationY="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:translationY="15dp">

            <ListView
                android:id="@+id/listViewTraining"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTrainingName"
        android:layout_width="168dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/trainer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTrainerTraining"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTrainerTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textViewTrainingName" />

    <TextView
        android:id="@+id/textViewTimeTraining"
        android:layout_width="148dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toEndOf="@+id/textViewTrainingName"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>